--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.44.24",
     "flowbite-svelte-icons": "^1.4.2",
+    "lucia": "^3.1.1",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.1",
@@ -42,6 +43,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^5.10.2"
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.10.2",
+    "oslo": "^1.1.3"
   }
 }
