--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-	"name": "banban",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.10",
-		"@tiptap/core": "^2.2.4",
-		"@tiptap/extension-link": "^2.2.4",
-		"@tiptap/pm": "^2.2.4",
-		"@tiptap/starter-kit": "^2.2.4",
-		"@types/eslint": "^8.56.0",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"flowbite": "^2.3.0",
-		"flowbite-svelte": "^0.44.24",
-		"flowbite-svelte-icons": "^1.4.2",
-		"lucia": "^3.1.1",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"prisma": "^5.11.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"svelte-dnd-action": "^0.9.40",
-		"tailwindcss": "^3.3.6",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@lucia-auth/adapter-prisma": "^4.0.1",
-		"@prisma/client": "^5.11.0",
-		"oslo": "^1.1.3"
-	}
+  "name": "banban",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tiptap/core": "^2.2.4",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "@types/eslint": "^8.56.0",
+    "autoprefixer": "^10.4.16",
+    "dropzone": "^6.0.0-beta.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.44.24",
+    "flowbite-svelte-icons": "^1.4.2",
+    "lucia": "^3.1.1",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.11.0",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "svelte-dnd-action": "^0.9.40",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.11.0",
+    "oslo": "^1.1.3",
+    "sharp": "^0.33.2"
+  }
 }
