--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/starter-kit": "^2.2.4",
     "@types/eslint": "^8.56.0",
     "autoprefixer": "^10.4.16",
+    "dayjs": "^1.11.10",
     "dropzone": "^6.0.0-beta.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
