--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/starter-kit": "^2.2.4",
     "@types/eslint": "^8.56.0",
     "autoprefixer": "^10.4.16",
+    "bits-ui": "^0.21.1",
     "dayjs": "^1.11.10",
     "dropzone": "^6.0.0-beta.2",
     "eslint": "^8.56.0",
