--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   banban:
-    image: m0gd0ck/banban:latest
+    image: ghcr.io/m0g/banban:latest
     container_name: banban
     restart: always
     build: .
